# Zelda-pixel

./: .gitignore  callgraph.py  function_call_graph  game_state.py  pyproject.toml
0-full/code/: debug.py  enemy.py  entity.py  level.py  magic.py  main.py  particles.py  persona.py  player.py  settings.py  support.py  tile.py  ui.py  upgrade.py  weapon.py
0-full/metadata/: openai-key.txt
1 - level/code/: main.py  player.py  tile.py
10 - Enemies/code/: debug.py  enemy.py  entity.py  level.py  main.py
11 - interactions/code/: enemy.py
12 - particles/code/: level.py  particles.py
13 - spells/code/: entity.py  player.py
15 - fixes audio/code/: enemy.py  particles.py  upgrade.py
4 - camera & ysort/code/: main.py
8 - UI/code/: player.py  ui.py
9 - Magic/code/: player.py  ui.py
code/: boubble.py  camera.py  enemy.py  entity.py  game_state.py  level.py  magic.py  main.py  memstream.py  particles.py  persona.py  player.py  settings.py  support.py  tile.py  tooltips.py  ui.py  upgrade.py  weapon.py
map/: map_Entities.csv  map_Objects.csv
zelda_soul/: __init__.py
zelda_soul/code/: __init__.py  ai_manager.py  api.py  behavior_tree.py  behaviors.py  camera.py  compute_manager.py  enemy.py  entity.py  event_bus.py  kjhkhkjh  level.py  magic.py  main.py  memstream.py  particles.py  persona.py  player.py  priorityqueue.py  prompt_generator.py  resources.py  settings.py  support.py  test.py  tile.py  tooltips.py  ui.py  upgrade.py  weapon.py
zelda_soul/map/: map.csv  map_Entities copy.csv  map_Entities.csv  map_FloorBlocks.csv
zelda_web/: index.html
(+43 files in other folders)
