[tool.poetry]
name = "zelda-soul"
version = "0.0.1"
description = "Zelda with soul entities"
authors = ["huybik"]

[tool.poetry.dependencies]
python = "^3.12,<3.14"
openai = "^1.54.4"
pygame = "^2.6.1"
python-dotenv = "^1.0.1"
ipywidgets = "^8.1.5"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"



